# forgottenserver

./: .editorconfig  .travis.yml  CMakeLists.txt  CMakePresets.json  Dockerfile  config.lua  docker-compose.yml  meson.build  schema.sql  vcpkg.json
.github/workflows/: build-ubuntu.yml  build-vcpkg.yml  coverity.yml  release-vcpkg.yml
cmake/: FindMySQL++.cmake  FindSQLite.cmake  FindSol2.cmake  FindTslRobinMap.cmake
data/: cpplinter.lua  global.lua
data/actions/: actions.xml
data/actions/scripts/other/: bed_modification_kits.lua  constructionkits.lua  doors.lua  fluids.lua  food.lua  teleport.lua
data/creaturescripts/: creaturescripts.xml
data/creaturescripts/scripts/: fasttravel.lua  login.lua  walk.lua
data/events/: events.xml
data/events/scripts/: player.lua
data/globalevents/scripts/: startup.lua
data/http/: http.lua
data/lib/core/: player.lua
data/migrations/: 29.lua  36.lua
data/scripts/network/: ping.lua
docker/: Dockerfile.compile  Dockerfile.server
docs/: changelog-1-0.md  changelog-1-1.md  changelog-1-2.md  changelog-1-3.md  compiling-on-arch-linux.md  compiling-on-centos.md  compiling-on-debian.md  compiling-on-fedora.md  compiling-on-freebsd.md  compiling-on-gentoo.md  compiling-on-mac-os-x.md  compiling-on-ubuntu.md  compiling-on-windows.md  compiling.md  functions.md  index.md  interface-actions.md  interface-chat-channel-events.md  interface-creature-events.md  interface-global-events.md  interface-monster-events.md  interface-movements.md  interface-npcs.md  interface-raids.md  interface-spells.md  interface-talkactions.md  interface-weapons.md  metatable-combat.md  metatable-condition.md  metatable-container.md  metatable-creature.md  metatable-group.md  metatable-guild.md  metatable-house.md  metatable-item.md  metatable-itemtype.md  metatable-modalwindow.md  metatable-monster.md  metatable-monstertype.md  metatable-networkmessage.md  (+14 more)
src/: CMakeLists.txt  account.h  actions.cpp  actions.h  ban.cpp  ban.h  baseevents.cpp  baseevents.h  bed.cpp  browsefield.cpp  browsefield.h  chat.cpp  chat.h  combat.cpp  combat.h  condition.cpp  condition.h  configmanager.cpp  configmanager.h  connection.cpp  connection.h  const.h  container.cpp  container.h  containers.h  creature.cpp  creature.h  creatureevent.cpp  creatureevent.h  cylinder.cpp  cylinder.h  database.cpp  database.h  databasemanager.cpp  databasetasks.cpp  definitions.h  enums.h  events.cpp  events.h  fileloader.cpp  (+92 more)
src/http/: CMakeLists.txt  cacheinfo.cpp  error.cpp  error.h  http.cpp  login.cpp  lua.cpp  lua.h  router.cpp  router.h  session.cpp  session.h
src/http/tests/: CMakeLists.txt  test_login.cpp
src/luaengine/: CMakeLists.txt  functions.cpp  functions.h  luascript.cpp  luascript.h  luautils.cpp  luautils.h
src/luamodules/: actions.cpp  combat.cpp  container.cpp  creature.cpp  creatureevent.cpp  game.cpp  globalevent.cpp  groups.cpp  guild.cpp  house.cpp  item.cpp  items.cpp  modalwindow.cpp  monster.cpp  monsters.cpp  moveevent.cpp  npc.cpp  party.cpp  player.cpp  podium.cpp  position.cpp  talkaction.cpp  tile.cpp  town.cpp  variant.cpp  weapons.cpp  xml.cpp
src/tests/: test_generate_token.cpp
vc14/: theforgottenserver.vcxproj
vc17/: theforgottenserver.vcxproj
(+3 files in other folders)
